# gopro-webcam

./: README.md  pyproject.toml  requirements.txt
src/gopro_webcam/: __init__.py  cli.py  gopro.py
