[project]
name = "gopro_webcam"
description = "Python interface to interact with GoPro as a webcam"
version = "0.1"
readme = "README.md"
authors = [
    { name = "Lucas Messenger", email = "1335960+layertwo@users.noreply.github.com" }
]
license = { text = "MIT" }
dependencies = [
    "requests==2.31.0",
]

[project.urls]
homepage = "https://github.com/layertwo/gopro-webcam"

[project.scripts]
gopro-webcam = "gopro_webcam.cli:main"

[tool.setuptools]
zip_safe = false

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 100

[tool.isort]
known_first_party = "gopro_webcam"
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = false
skip = [".git", "venv"]
